@@ -2519,4 +2519,27 @@ sub ousToHide
     return \@ous;
 }
 
+# Method: appArmorProfiles
+#
+#   Overrides to set the own AppArmor profile
+#
+# Overrides:
+#
+#   <EBox::Module::Base::appArmorProfiles>
+#
+sub appArmorProfiles
+{
+    my ($self) = @_;
+
+    EBox::info('Setting mysqld apparmor profile');
+    return [
+        {
+         'binary' => 'usr.sbin.mysqld',
+         'local'  => 1,
+         'file'   => 'users/apparmor-mysqld.local.mas',
+         'params' => [],
+        }
+    ];
+}
+
 1;
